Project

General

Profile

Actions

Bug #44671

closed

rgw/ swift stat can hang

Added by Marcus Watts about 4 years ago. Updated over 3 years ago.

Status:
Resolved
Priority:
Normal
Assignee:
Target version:
% Done:

0%

Source:
Tags:
Backport:
octopus,nautilus,mimic
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

"swift stat" can hang. This happens when doing an account stat (ie, no bucket), when the user has more than 1000 buckets. This bug was introduced some time ago (in luminous), but wasn't noticed because in order to hit this, one first has to bump up the bucket limit in order to create more than 1000 buckets.


Related issues 3 (0 open3 closed)

Copied to rgw - Backport #45927: nautilus: rgw/ swift stat can hangResolvedNathan CutlerActions
Copied to rgw - Backport #45928: octopus: rgw/ swift stat can hangResolvedNathan CutlerActions
Copied to rgw - Backport #45929: mimic: rgw/ swift stat can hangRejectedActions
Actions #2

Updated by J. Eric Ivancich about 4 years ago

  • Status changed from New to Fix Under Review
  • Target version set to v15.0.0
  • Backport set to octopus,nautilus,mimic
  • Pull request ID set to 34041
Actions #3

Updated by J. Eric Ivancich almost 4 years ago

  • Status changed from Fix Under Review to Pending Backport
Actions #4

Updated by Nathan Cutler almost 4 years ago

Actions #5

Updated by Nathan Cutler almost 4 years ago

Actions #6

Updated by Nathan Cutler almost 4 years ago

Actions #7

Updated by Nathan Cutler over 3 years ago

  • Status changed from Pending Backport to Resolved

While running with --resolve-parent, the script "backport-create-issue" noticed that all backports of this issue are in status "Resolved" or "Rejected".

Actions

Also available in: Atom PDF