rgw: fix loop problem with swift stat on account.

Loop logic in RGWStatAccount::execute was failing to change the
marker before repeating a call to rgw_read_user_buckets().  This resulted
that in the case that a user had more than 1000 buckets, this routine
would loop forever.

Fixes: https://tracker.ceph.com/issues/44671
Signed-off-by: Marcus Watts <mwatts@redhat.com>
(cherry picked from commit c9f3cf6ed6a649812d47dc1fa1357ae0749dbcbf)

Conflicts:
	src/rgw/rgw_op.cc